k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sonarqube-maven-example
  name: sonarqube-maven-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube-maven-example
  template:
    metadata:
      labels:
        app: sonarqube-maven-example
    spec:
      
      containers:
        - image: quay.io/sumitbiswal/jenkins-agent-maven

          name: sonarqube-maven-example
          ports:
            - containerPort: 8080
              protocol: TCP

      imagePullSecrets:
          - name: adhis-pull-secret
