k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: sonarqube-maven-example
  name: sonarqube-maven-example
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: sonarqube-maven-example
    weight: 100
